--- a/symphony/assets/symphony.css
+++ b/symphony/assets/symphony.css
@@ -80,11 +80,13 @@
 				-moz-border-radius: 5px;
 				-webkit-border-radius: 5px;
 				display: inline-block;
-				line-height: 15px;
-				padding: 5px;
+				height: 22px;
+				line-height: 22px;
+				padding: 0 5px;
 			}
 			#session li a:hover {
 				background: hsla(0, 0%, 50%, 0.2);
+				-moz-box-shadow: 1px 1px 2px hsla(0, 0%, 0%, 0.2);
 			}
 			
 		/* @end */
@@ -129,10 +131,13 @@
 					top,
 					hsla(215, 40%, 75%, 1),
 					hsla(215, 40%, 60%, 1) 1px,
-					hsla(215, 40%, 50%, 1)
+					hsla(215, 40%, 50%, 1) 32px,
+					hsla(215, 40%, 40%, 1)
 				);
 				color: #ffffff;
+				height: 33px;
 				text-shadow: 1px 1px 0 hsla(0, 0%, 0%, 0.5);
+				z-index: 1;
 			}
 			#nav > li:hover {
 				color: #ffffff;
@@ -144,6 +149,7 @@
 					hsla(0, 0%, 25%, 1)
 				);
 				text-shadow: 1px 1px 0 hsla(0, 0%, 0%, 0.5);
+				z-index: 2;
 			}
 			
 			/* @group Sub Navigation */
@@ -155,6 +161,7 @@
 						hsla(0, 0%, 25%, 1),
 						hsla(0, 0%, 20%, 1)
 					);
+					-moz-box-shadow: 1px 1px 2px hsla(0, 0%, 0%, 0.2);
 					display: none;
 					left: 0;
 					list-style: none;
@@ -205,6 +212,10 @@
 			margin: 20px 30px;
 		}
 		
+		.inactive {
+			color: hsla(0, 0%, 0%, 0.3);
+		}
+		
 		/* @group Buttons */
 			
 			.button {
@@ -217,11 +228,14 @@
 				border-radius: 5px;
 				-moz-border-radius: 5px;
 				-webkit-border-radius: 5px;
+				-moz-box-shadow: 1px 1px 2px hsla(0, 0%, 0%, 0.2);
 				color: #ffffff;
 				display: inline;
 				float: right;
 				font-size: 9pt;
-				padding: 4px 7px;
+				height: 22px;
+				line-height: 22px;
+				padding: 0 7px;
 				text-decoration: none;
 				text-shadow: 1px 1px 0 hsla(0, 0%, 0%, 0.5);
 				white-space: nowrap;
@@ -229,15 +243,15 @@
 			.button.create {
 				background: -moz-linear-gradient(
 					top,
-					hsla(85, 50%, 60%, 1),
-					hsla(85, 50%, 50%, 1)
+					hsla(80, 50%, 50%, 1),
+					hsla(80, 50%, 40%, 1)
 				);
 			}
 			.button:hover {
 				background: -moz-linear-gradient(
 					top,
-					hsla(0, 0%, 30%, 1),
-					hsla(0, 0%, 20%, 1)
+					hsla(0, 0%, 40%, 1),
+					hsla(0, 0%, 30%, 1)
 				);
 				color: #ffffff;
 			}
@@ -252,10 +266,10 @@
 				width: 100%;
 			}
 			table thead tr th {
-				padding: 0 10px 6px 10px;
+				padding: 0 10px 8px 10px;
 			}
 			table tbody tr td {
-				padding: 6px 10px;
+				padding: 8px 10px;
 			}
 			table th:first-child,
 			table td:first-child {
@@ -274,7 +288,6 @@
 			table tbody tr td {
 				background: -moz-linear-gradient(
 					top,
-					hsla(0, 0%, 0%, 0.01),
 					hsla(0, 0%, 0%, 0),
 					hsla(0, 0%, 0%, 0.01)
 				);
@@ -282,13 +295,9 @@
 			table tbody tr:nth-child(even) td {
 				background: -moz-linear-gradient(
 					top,
-					hsla(0, 0%, 0%, 0.03),
 					hsla(0, 0%, 0%, 0.02),
 					hsla(0, 0%, 0%, 0.03)
 				);
-			}
-			table tbody tr td.inactive {
-				color: hsla(0, 0%, 0%, 0.3);
 			}
 			table tbody tr td input {
 				display: none;
@@ -313,8 +322,8 @@
 	/* @group Views List */
 		
 		#views-list td.toggle div {
-			margin: -6px 0;
-			padding: 6px 0;
+			margin: -8px 0;
+			padding: 8px 0;
 			position: relative;
 		}
 		#views-list td.toggle a.hide,
@@ -324,6 +333,10 @@
 			-webkit-border-radius: 5px;
 			display: inline-block;
 			left: -25px;
+			height: 20px;
+			line-height: 20px;
+			font-size: 8pt;
+			margin: -2px 0;
 			position: absolute;
 			text-align: center;
 			text-decoration: none;
@@ -339,7 +352,7 @@
 			-moz-transform: matrix(-1, 0, 0, 1, 0, 0);
 			-webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
 			-o-transform:matrix(-1, 0, 0, 1, 0, 0);
-			font-size: 7pt;
+			font-size: 8pt;
 		}
 		#views-list .selected td.toggle div span {
 			color: #aabbee;
