--- a/symphony/assets/symphony.css
+++ b/symphony/assets/symphony.css
@@ -192,6 +192,7 @@
 			/* @group Sub Navigation */
 				
 				#nav ul {
+					display: none;
 					background-color: #444;
 					background: -moz-linear-gradient(
 						top,
@@ -207,7 +208,6 @@
 					);
 					-moz-box-shadow: 1px 2px 2px hsla(0, 0%, 0%, 0.2);
 					-webkit-box-shadow: 1px 2px 2px hsla(0, 0%, 0%, 0.2);
-					display: none;
 					left: 0;
 					list-style: none;
 					width: 120px;
@@ -658,6 +658,7 @@
 			text-align: center;
 			font-weight: bold;
 			font-size: 13pt;
+			font-family: serif;
 			background-color: #fff9c9;
 			border-radius: 20px;
 			-moz-border-radius: 20px;
