--- a/symphony/assets/symphony.css
+++ b/symphony/assets/symphony.css
@@ -300,10 +300,6 @@
 				#tab li a.active {
 					background: #fff;
 				}
-				#tab + fieldset {
-					border: none;
-					margin-top: -20px;
-				}
 				h2 + #tab {
 					margin-top: -5px;
 				}
@@ -320,9 +316,6 @@
 			font-size: 11pt;
 			padding: 15px 30px 20px;
 		}
-		h3 {
-			margin: 10px 0;
-		}
 		code {
 			font-family: 'Monaco', 'Consolas', 'Andale Mono', monospace;
 			font-size: 8pt;
@@ -335,7 +328,10 @@
 			padding: 10px 0;
 		}
 		p {
-			margin: 10px 0;
+			margin: 0 0 10px;
+		}
+		p:last-child {
+			margin: 0;
 		}
 		.inactive {
 			color: hsla(0, 0%, 0%, 0.3);
@@ -343,8 +339,73 @@
 		
 		/* @group Buttons */
 			
+			fieldset + .actions input[type=submit],
+			button,
 			.button {
-				background-color: #85ab38;
+				background-color: #222;
+				background: -moz-linear-gradient(
+					top,
+					#6f6f6f,
+					#1c1c1c
+				);
+				background: -webkit-gradient(
+					linear,
+					left top,
+					left bottom,
+					from(#6f6f6f),
+					to(#1c1c1c)
+				);
+				border: 1px solid #5f605e;
+				border-radius: 5px;
+				-moz-border-radius: 5px;
+				-webkit-border-radius: 5px;
+				color: #fff;
+				display: inline;
+				float: right;
+				font-size: 8pt;
+				padding: 3px 7px;
+				text-decoration: none;
+				text-shadow: 1px 1px 0 hsla(0, 0%, 0%, 0.1);
+				white-space: nowrap;
+				cursor: pointer;
+			}
+			.button.create {
+				background: -moz-linear-gradient(
+					top,
+					#8ed130,
+					#88bd3c
+				);
+				background: -webkit-gradient(
+					linear,
+					left top,
+					left bottom,
+					from(#8ed130),
+					to(#88bd3c)
+				);
+				border: 1px solid #88bd3c;
+			}
+			button.delete {
+				float: left;
+				background-color: #db4355;
+				background: -moz-linear-gradient(
+					top,
+					#db4355,
+					#ab3939
+				);
+				background: -webkit-gradient(
+					linear,
+					left top,
+					left bottom,
+					from(#db4355),
+					to(#ab3939)
+				);
+				border: 1px solid #cb1f2b;
+			}
+			fieldset + .actions input[type=submit]:hover,
+			button:hover,
+			.button:hover {
+				color: #fff;
+				background-color: #444;
 				background: -moz-linear-gradient(
 					top,
 					hsla(215, 40%, 60%, 1),
@@ -354,54 +415,10 @@
 					linear,
 					left top,
 					left bottom,
-					from(hsla(215, 40%, 60%, 1)),
-					to(hsla(215, 40%, 50%, 1))
+					from(#888),
+					to(#666)
 				);
-				border: none;
-				border-radius: 5px;
-				-moz-border-radius: 5px;
-				-webkit-border-radius: 5px;
-				-moz-box-shadow: 1px 1px 2px hsla(0, 0%, 0%, 0.2);
-				color: #fff;
-				display: inline;
-				float: right;
-				font-size: 8pt;
-				height: 22px;
-				line-height: 22px;
-				padding: 0 7px;
-				text-decoration: none;
-				text-shadow: 1px 1px 0 hsla(0, 0%, 0%, 0.2);
-				white-space: nowrap;
-			}
-			.button.create {
-				background: -moz-linear-gradient(
-					top,
-					hsla(80, 50%, 50%, 1),
-					hsla(80, 50%, 40%, 1)
-				);
-				background: -webkit-gradient(
-					linear,
-					left top,
-					left bottom,
-					from(hsla(80, 50%, 50%, 1)),
-					to(hsla(80, 50%, 40%, 1))
-				);
-			}
-			.button:hover {
-				color: #fff;
-				background-color: #555;
-				background: -moz-linear-gradient(
-					top,
-					hsla(0, 0%, 40%, 1),
-					hsla(0, 0%, 30%, 1)
-				);
-				background: -webkit-gradient(
-					linear,
-					left top,
-					left bottom,
-					from(hsla(0, 0%, 40%, 1)),
-					to(hsla(0, 0%, 30%, 1))
-				);
+				border: 1px solid #777;
 			}
 			
 		/* @end */
@@ -452,35 +469,47 @@
 			table tbody tr td input[type=checkbox] {
 				display: none;
 			}
-			
+			table + .actions {
+				border: none;
+			}
 		/* @end */
 
 		/* @group Forms */
-		
+			form {
+				margin-bottom: 20px;
+			}
 			form fieldset {
+				position: relative;
 				border: none;
 				border-top: 1px solid hsla(0, 0%, 0%, 0.1);
-				padding: 0 30px 0 230px;
+				padding: 10px 30px 15px 30px;
+				min-height: 60px;
 			}
-			form fieldset legend {
+			form legend {
 				color: #666;
-				float: left;
-				margin: 15px 0 -30px 0;
-				text-indent: -200px;
 				font-weight: bold;
+				background: #fff;
+				padding: 5px 10px;
+				margin-left: -10px;
 			}
 			form .help {
-				color: #888;
-				margin-top: -10px;
+				color: #999;
+				margin-top: -15px;
 			}
-			form fieldset legend + .help {
-				float: left;
-				margin-top: 25px;
-				margin-left: -200px;
+			form legend + .help {
+				position: absolute;
+				top: -2px;
+				right: 30px;
+				background: #fff;
+				padding: 5px 10px;
+				margin: 0 -10px 0 0;
 			}
 			form label {
 				display: block;
-				margin: 15px 0;
+				margin-bottom: 15px;
+			}
+			form .label {
+				margin-bottom: 3px;
 			}
 			form label input,
 			form .label input,
@@ -492,39 +521,59 @@
 				width: 100%;
 				padding: 2px;
 			}
-			input[size],
-			input[type=radio],
-			input[type=checkbox] {
+			form input {
+				cursor: text;
+			}
+			form input[type=submit] {
+				cursor: default;
+			}
+			form input[size],
+			form input[type=radio],
+			form input[type=checkbox] {
 				display: inline;
 				margin: 0 3px 0 0;
 				width: auto;
 			}
-			select[multiple] {
+			form select[multiple] {
 				min-height: 100px;
 				padding: 0;
 			}
-			form label input {
-				cursor: text;
+			form .label span {
+				display: block;
+				background-color: #f3f3f3;
+				border: 1px solid #ddd;
+				padding: 8px;
+				margin-bottom: 15px;
 			}
-			.group {
+			form .label #change-password {
+				display: block;
+				margin: 0 auto;
+			}
+			form .group {
 				display: table;
 				table-layout: fixed;
 				width: 100%;
-				margin: 15px 0;
+				margin-bottom: 15px;
 			}
-			.group label,
-			.group div {
+			form label:last-child,
+			form .group:last-child,
+			form .label:last-child span {
+				margin-bottom: 0;
+			}
+			form .group label,
+			form .group div {
 				display: table-cell;
 				padding-left: 20px;
+				margin-top: 0;
 			}
-			.group div label {
+			form .group div label {
 				display: block;
 				padding: 0;
 				margin-bottom: 3px;
 			}
-			.group > label:first-child,
-			.group > div:first-child label,
-			.group > div:first-child {
+			form .group > label:first-child,
+			form .group > div:first-child label,
+			form .group > div:first-child {
 				padding-left: 0;
 			}
 
@@ -538,6 +587,7 @@
 					color: #888;
 					display: inline;
 					margin-right: 8px;
+					cursor: pointer;
 				}
 			
 			/* @end */
@@ -559,8 +609,6 @@
 			.actions {
 				padding: 20px 30px;
 				text-align: right;
-			}
-			fieldset + .actions {
 				border-top: 1px solid hsla(0, 0%, 0%, 0.1);
 			}
 			.actions input {
@@ -612,14 +660,14 @@
 		
 	/* @end */
 
-	/* @group Errors */
+	/* @group System Notifiaction */
 
 		#notice {
 			z-index: 10;
 			position: absolute;
-			width: 40%;
+			width: 50%;
 			left: 50%;
-			margin: 0 0 0 -20%;
+			margin: 0 0 0 -25%;
 			color: #fff;
 			line-height: 20px;
 			padding: 6px 12px;
