--- a/symphony/assets/css/symphony.css
+++ b/symphony/assets/css/symphony.css
@@ -669,9 +669,12 @@
 	.options-list {
 		border-top: 1px dotted #dddddd;
 		border-top-color: hsla(0, 0%, 0%, 0.2);
+		line-height: 2;
 		list-style: none;
 		margin: 20px 0 0 0;
 		padding: 20px 0 0 0;
+	}
+	.options-list li {
 	}
 	.options-list li label {
 		margin: 0;
