Sections with-selected now Delete's, Delete added to Section Detail page

--- a/symphony/assets/css/symphony.css
+++ b/symphony/assets/css/symphony.css
@@ -349,6 +349,7 @@
 -----------------------------------------------------------------------------*/
 
 	fieldset ~ .actions input[type=submit],
+	div ~ .actions input[type=submit],
 	button,
 	.button {
 		background-color: #222;
