--- a/symphony/assets/css/symphony.css
+++ b/symphony/assets/css/symphony.css
@@ -1,4 +1,4 @@
-/* @override 
+/* @override
 	http://symphony-21.local/symphony/assets/css/symphony.css
 	http://localhost/projects/symphony-21/symphony/assets/css/symphony.css
 */
@@ -314,7 +314,7 @@
 	h2 + #tab {
 		margin-top: -5px;
 	}
-	
+
 /*-----------------------------------------------------------------------------
 	Content
 -----------------------------------------------------------------------------*/
@@ -565,7 +565,7 @@
 			-moz-box-flex: 4;
 			-webkit-box-flex: 4;
 		}
-		
+
 	form fieldset {
 		position: relative;
 		border: none;
@@ -618,6 +618,9 @@
 		display: block;
 		margin-bottom: 15px;
 	}
+	form label i {
+		margin-left: .25em;
+	}
 	form label input,
 	form .label input,
 	form label select,
@@ -638,6 +641,7 @@
 	form input[type=checkbox] {
 		display: inline;
 		width: auto;
+		margin-right: .4em;
 	}
 	form select[multiple] {
 		min-height: 100px;
@@ -692,7 +696,7 @@
 /*-----------------------------------------------------------------------------
 	Content: Form: Options List
 -----------------------------------------------------------------------------*/
-	
+
 	.options-list {
 		border-top: 1px dotted #dddddd;
 		border-top-color: hsla(0, 0%, 0%, 0.2);
@@ -706,7 +710,7 @@
 	.options-list li label {
 		margin: 0;
 	}
-	
+
 /*-----------------------------------------------------------------------------
 	Content: Form: Tags
 -----------------------------------------------------------------------------*/
@@ -769,7 +773,7 @@
 	#utilities li:nth-child(even) {
 		background-color: #fff;
 	}
-	
+
 	#utilities li:first-child {
 		border-top: 0;
 	}
@@ -849,7 +853,7 @@
 		border-radius: 9px;
 		-moz-border-radius: 9px;
 		-webkit-border-radius: 9px;
-		display: block;	
+		display: block;
 	}
 	#sections-tool tbody .added .status:before {
 		content: "+";
