System Roles to DOMDocument, Remove all  occurrences (this is done with CSS3 now)

--- a/symphony/assets/css/symphony.css
+++ b/symphony/assets/css/symphony.css
@@ -642,6 +642,7 @@
 		display: inline;
 		width: auto;
 		margin-right: .4em;
+		cursor: pointer;
 	}
 	form select[multiple] {
 		min-height: 100px;
